--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <span class="web-dev-text">Web Developer</span>                    
                 </div>
                 <div class="section__start--photo">
-                    <img src="./picture/me_small.jpg" alt="Image">
+                    <!-- <img src="./picture/me_small.jpg" alt="Image"> -->
                 </div>
             </section>
 
