--- a/index.html
+++ b/index.html
@@ -64,30 +64,30 @@
 
         <main class="main">
             
-            <section id="start" class="section__start">
-                <div class="section__start--text">
+            <section id="start" class="section-start">
+                <div class="section-start--text">
                     <span class="name">Kamil</span>
                     <span class="surname">Tomala</span>
                     <span class="web-dev-text">Web Developer</span>                    
                 </div>
-                <div class="section__start--photo">
+                <div class="section-start--photo">
                     <!-- <img src="./picture/me_small.jpg" alt="Image"> -->
                 </div>
             </section>
 
-            <section id="about" class="section__about">                    
-                <div class="section__about--container">                     
-                    <div class="section__about--text">
+            <section id="about" class="section-about">                    
+                <div class="section-about--container">                     
+                    <div class="section-about--text">
                         <p>Lorem ipsum dolor sit amet libero auctor varius, scelerisque pede id mauris et rhoncus interdum, lacus. Maecenas ante. Donec sit amet, consectetuer tincidunt nec, scelerisque ligula, egestas ipsum dolor nonummy consequat. Morbi quis ante. Maecenas blandit velit wisi, id leo ac quam fermentum risus. Aliquam vitae justo. Donec vitae mauris. Fusce aliquet at, justo. Fusce tellus. Curabitur fringilla aliquet. In ornare vel, velit. Nunc id eleifend vitae, rutrum laoreet. Nam quis lectus blandit risus neque vel massa. Nulla ante. Phasellus pulvinar interdum. Proin quis lacus tellus augue, sagittis nec, iaculis malesuada congue. Nam nec tincidunt vehicula, feugiat ac, vehicula lectus. Curabitur feugiat dui, porta tincidunt.</p>
                     </div>                    
                 </div>
             </section>
 
-            <section class="section__technology">
+            <section class="section-technology">
                 <div class="heading-small">
                     <span>Poznane technologie</span>
                 </div>
-                <div class="section__technology--container">
+                <div class="section-technology--container">
                     <div class="icon-box">
                         <ion-icon name="logo-html5"></ion-icon>
                         <div class="icon-details">
