Add photo container

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                     <span class="surname">Tomala</span>
                     <span class="web-dev-text">Web Developer</span>                    
                 </div>
-                <div class="section-start--photo">
-                    <!-- <img src="./picture/me_small.jpg" alt="Image"> -->
+                <div class="photo">
+                    <figure class="photo__shape">
+                        <img src="./picture/me_small.jpg" alt="My photo" class="photo__img">
+                    </figure>
                 </div>
             </section>
 
