--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="photo">
                     <figure class="photo__shape">
-                        <img src="./picture/me_small.jpg" alt="My photo" class="photo__img">
+                        <img src="./img/me_small.jpg" alt="My photo" class="photo__img">
                     </figure>
                 </div>
             </section>
