Delete photo from section start

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     <span class="surname">Tomala</span>
                     <span class="web-dev-text">Web Developer</span>                    
                 </div>
-                <div class="photo">
+                <!-- <div class="photo">
                     <figure class="photo__shape">
                         <img src="./img/me.jpg" alt="My photo" class="photo__img">
                     </figure>
-                </div>
+                </div> -->
             </section>
 
             <section id="about" class="section-about">                    
