Change width nav items and add margin-top

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="section-start--text">
                         <span class="name">Kamil</span>
                         <span class="anim-border--right"></span>                    
-                        <span class="surname">Tomala</span>
+                        <span class="nimate__animated animate__bounce animate__delay-2s">Tomala</span>
                         <span class="anim-border--left"></span>
                         <span class="web-dev-text">Web Developer</span>                    
                 </div>
