--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
             
             <section id="start" class="section-start">
                 <div class="section-start--text">
+                    <div class="anim-border--right">
                         <span class="name">Kamil</span>
-                        <span class="anim-border--right"></span>                    
+                    </div>
                         <span class="surname">Tomala</span>
                         <span class="anim-border--left"></span>
                         <span class="web-dev-text">Web Developer</span>                    
