Back to before layout

--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
             
             <section id="start" class="section-start">
                 <div class="section-start--text">
-                    <div class="anim-border--right">
-                        <span class="name">Kamil</span>
-                    </div>
-                        <span class="surname">Tomala</span>
-                        <span class="anim-border--left"></span>
-                        <span class="web-dev-text">Web Developer</span>                    
-                </div>
+                    <span class="name">Kamil</span>
+                    <span class="anim-border--right"></span>                    
+                    <span class="surname">Tomala</span>
+                    <span class="anim-border--left"></span>
+                    <span class="web-dev-text">Web Developer</span>                    
+                </span>
                 <!-- <div class="photo">
                     <figure class="photo__shape">
                         <img src="./img/me.jpg" alt="My photo" class="photo__img">
