Add photo to header - nav

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <body>
 
         <header class="header">
+            <div class="photo">
+                <figure class="photo__shape">
+                    <img src="./img/me.jpg" alt="My photo" class="photo__img">
+                </figure>
+            </div>
+
 
                 <nav class="navbar">
                     <ul class="navbar__list">
@@ -72,11 +78,6 @@
                     <span class="anim-border--left"></span>
                     <span class="web-dev-text">Web Developer</span>                    
                 </span>
-                <!-- <div class="photo">
-                    <figure class="photo__shape">
-                        <img src="./img/me.jpg" alt="My photo" class="photo__img">
-                    </figure>
-                </div> -->
             </section>
 
             <section id="about" class="section-about">                    
