--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             </section>
 
             <section id="about" class="section-about">                    
-                <div class="section-about--container">                     
+                <div class="section-about--container"> 
+                    <figure class="photo__about">
+                        <img src="./img/me_to_about.jpg" alt="My photo in to the forest">
+                    </figure>                    
                     <div class="section-about--text">
                         <p>Lorem ipsum dolor sit amet libero auctor varius, scelerisque pede id mauris et rhoncus interdum, lacus. Maecenas ante. Donec sit amet, consectetuer tincidunt nec, scelerisque ligula, egestas ipsum dolor nonummy consequat. Morbi quis ante. Maecenas blandit velit wisi, id leo ac quam fermentum risus. Aliquam vitae justo. Donec vitae mauris. Fusce aliquet at, justo. Fusce tellus. Curabitur fringilla aliquet. In ornare vel, velit. Nunc id eleifend vitae, rutrum laoreet. Nam quis lectus blandit risus neque vel massa. Nulla ante. Phasellus pulvinar interdum. Proin quis lacus tellus augue, sagittis nec, iaculis malesuada congue. Nam nec tincidunt vehicula, feugiat ac, vehicula lectus. Curabitur feugiat dui, porta tincidunt.</p>
                     </div>                    
