--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="sass/main.css">
-        <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+        <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
         <title>Kamil Tomala</title>
     </head>
 
@@ -77,6 +77,9 @@
                     <span class="surname">Tomala</span>
                     <span class="anim-border--left"></span>
                     <span class="web-dev-text">Web Developer</span>                    
+                    <div>
+                        <ion-icon name="logo-github"></ion-icon>
+                    </div>
                 </span>
             </section>
 
