Adding icons scss files

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <span class="surname">Tomala</span>
                     <span class="anim-border--left"></span>
                     <span class="web-dev-text">Web Developer</span>                    
-                    <div>
+                    <div class="icons">
                         <ion-icon name="logo-github"></ion-icon>
                     </div>
                 </span>
