Added icon GitHub and add link to my profile on GitHub

--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
                     <span class="anim-border--right"></span>                    
                     <span class="surname">Tomala</span>
                     <span class="anim-border--left"></span>
-                    <span class="web-dev-text">Web Developer</span>                    
-                    <div class="icons">
-                        <ion-icon name="logo-github"></ion-icon>
-                    </div>
+                    <span class="web-dev-text">Web Developer</span>  
                 </span>
+                <div class="icons">
+                    <a href="https://github.com/kato86" target="_blank">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+                </div>
             </section>
 
             <section id="about" class="section-about">                    
