--- a/index.html
+++ b/index.html
@@ -77,12 +77,10 @@
                     <span class="surname">Tomala</span>
                     <span class="anim-border--left"></span>
                     <span class="web-dev-text">Web Developer</span>  
-                </span>
-                <div class="icons">
-                    <a href="https://github.com/kato86" target="_blank">
-                        <ion-icon name="logo-github"></ion-icon>
-                    </a>
-                </div>
+                </span>                
+                <a href="https://github.com/kato86" class='icons' target="_blank">
+                    GitHub Profile
+                </a>                
             </section>
 
             <section id="about" class="section-about">                    
