Center github icon

--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
                     <span class="surname">Tomala</span>
                     <span class="anim-border--left"></span>
                     <span class="web-dev-text">Web Developer</span>  
-                </span>                
-                <a href="https://github.com/kato86" class='icons' target="_blank">
-                    GitHub Profile
-                </a>                
+                </span>  
+                <div class="icons-container">
+                    <a href="https://github.com/kato86" class='icons' target="_blank">
+                        GitHub Profile
+                    </a>                
+                </div>              
             </section>
 
             <section id="about" class="section-about">                    
