--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
                     <span class="web-dev-text">Web Developer</span>  
                 </span>  
                 <div class="icons-container">
-                    <a href="https://github.com/kato86" class='icons' target="_blank">
-                        GitHub Profile
+                    <a href="https://github.com/kato86" class='icon--github' target="_blank">
+                        GitHub
+                    </a>                
+                    <a href="/" class='icon--linkedin' target="_blank">
+                        LinkedIn
                     </a>                
                 </div>              
             </section>
