Styling new added icons

--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
                     <a href="/" class='icon--linkedin' target="_blank">
                         LinkedIn
                     </a>                
+                    <a href="/" class='icon--twitter' target="_blank">
+                        Twitter
+                    </a>                
+                    <a href="/" class='icon--instagram' target="_blank">
+                        Instagram
+                    </a>                
+                    <a href="/" class='icon--fb' target="_blank">
+                        fb
+                    </a>                
+                    <a href="/" class='icon--mail' target="_blank">
+                        mail
+                    </a>                
                 </div>              
             </section>
 
