Add text to header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <body>
         <div class="container">
             <header class="header">
+                <div class="header__text">
+                    <span>Kamil</span>
+                    <span>Tomala</span>
+                </div>
                 <div class="photo">
                     <figure class="photo__shape">
                         <img src="./img/me.jpg" alt="My photo" class="photo__img">
