Add margin and padding to nav

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <span class="surname">Tomala</span>
                         <span class="anim-border--left"></span>
                         <span class="web-dev-text">Web Developer</span>  
-                    </span>  
+                    </div>  
                     <div class="icons-container">
                         <a href="https://github.com/kato86" class='icon--github' target="_blank">
                             GitHub
